fixed the issues with data, finaincial modelling and hte api layer integration